--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url('../../.cache/wal/colors-waybar.css');
 * {
-  font-size: 15px;
-  font-family: 'CodeNewRoman Nerd Font Propo';
+  font-size: 1.125rem;
+  font-family: 'FiraCode Nerd Font';
 }
 window#waybar {
   all: unset;
