--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -5,6 +5,7 @@
   margin: unset;
   padding: unset;
   transition: 200ms cubic-bezier(0, 0, 1, 1);
+  font-family: 'Fira Code Nerd Font Mono';
 }
 window {
   background-color: alpha(@background, 0.88);
@@ -15,6 +16,7 @@ button {
   border-radius: 1rem;
   background-position: center;
   font-size: 1.25rem;
+  letter-spacing: -0.032em;
   background-size: 15%;
   color: alpha(@foreground, 0.88);
 }
