--- a/.config/wofi/style-wallpaper.css
+++ b/.config/wofi/style-wallpaper.css
@@ -1,4 +1,4 @@
-@import url('/home/joseph/.cache/wal/colors-waybar.css');
+@import url('.cache/wal/colors-waybar.css');
 
 @define-color mauve  @color9;
 @define-color red  @color9;
