--- a/.config/wofi/style-waybar.css
+++ b/.config/wofi/style-waybar.css
@@ -1,97 +1,96 @@
-@import url('/home/joseph/.cache/wal/colors-waybar.css');
+@import url('./.cache/wal/colors-waybar.css');
 
 @define-color mauve  @color9;
 @define-color red  @color9;
 @define-color lavender  @color7;
-@define-color text  @color7;
+@define-color text  @color15;
 @keyframes fadeIn {
-    0% {
-    }
-    100% {
-    }
+  0% {
+  }
+  100% {
+  }
 }
 
 * {
-    all: unset;
-    font-family: 'CodeNewRoman Nerd Font Mono', monospace;
-    font-size: 18px;
-    outline: none;
-    border: none;
-    text-shadow:none;
-    background-color:transparent;
+  all: unset;
+  font-family: 'Fira Code Nerd Font Mono', monospace;
+  font-size: 1.125rem;
+  letter-spacing: -0.05em;
+  outline: none;
+  border: none;
+  text-shadow: none;
+  background-color: transparent;
 }
 
 window {
-    all:unset;
-    padding: 20px;
-    border-radius: 0px;
-    background-color: alpha(@background,.5);
+  all: unset;
+  padding: 1rem;
+  border-radius: 0px;
+  background-color: alpha(@background, 0.95);
 }
 #inner-box {
-    margin: 2px;
-    padding: 5px
-    border: none;
+  border: none;
 }
-#outer-box {    
-    border: none;
+#outer-box {
+  border: none;
 }
 #scroll {
-    margin: 0px;
-    padding: 30px;
-    border: none;
+  margin: 0px;
+  padding: 1rem;
+  border: none;
 }
 #input {
-    all:unset;
-    margin-left:20px;
-    margin-right:20px;
-    margin-top:20px;
-    padding: 20px;
-    border: none;
-    outline: none;
-    color: @text;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
-    border-radius:10;
-    background-color: alpha(@background,.2);
+  all: unset;
+  margin: 1rem;
+  padding: 1.25rem 0.5rem 1.25rem 1.25rem;
+  border: none;
+  outline: none;
+  color: @text;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  background-color: alpha(@foreground, 0.2);
 }
 #input image {
-    border: none;
-    color: @red;
+  border: none;
+  color: @red;
+  padding-right: 10px;
 }
 #input * {
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 }
 
 #input:focus {
-    outline: none;
-    border: none;
-    border-radius:10;
+  outline: none;
+  border: none;
+
+  border-radius: 10;
 }
 #text {
-    margin: 5px;
-    border: none;
-    color: @text;
-    outline: none;
+  margin: 0 1rem;
+  border: none;
+  color: @text;
+  outline: none;
 }
+
 #entry {
-    border: none;
-    padding: 30;
+  border: none;
+  padding: 1rem;
 }
 #entry arrow {
-    border: none;
-    color: @lavender;
-
+  border: none;
+  color: @lavender;
 }
 #entry:selected {
-    padding: 30;
-    border: none;
-    border-radius: 20px;
-    background-color: alpha(@background,.2);
+  box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.03);
+  border: none;
+  border-radius: 20px;
+  background-color: alpha(@color10, 0.16);
 }
 #entry:selected #text {
-    color: @mauve;
-}
-#entry:drop(active) {
-    background-color: @lavender !important;
+  color: @color10;
 }
 
+#entry:drop(active) {
+  background-color: @lavender !important;
+}
