--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,4 +1,4 @@
-@import url('/home/joseph/.cache/wal/colors-waybar.css');
+@import url('./.cache/wal/colors-waybar.css');
 
 @define-color mauve  @color9;
 @define-color red  @color9;
@@ -13,8 +13,9 @@
 
 * {
   all: unset;
-  font-family: 'CodeNewRoman Nerd Font Mono', monospace;
-  font-size: 1.5rem;
+  font-family: 'Fira Code Nerd Font Mono', monospace;
+  font-size: 1.125rem;
+  letter-spacing: -0.05em;
   outline: none;
   border: none;
   text-shadow: none;
