feat: hopefully a working dotfiles

--- a/.config/waybar/themes/line/style-line.css
+++ b/.config/waybar/themes/line/style-line.css
@@ -3,7 +3,7 @@
 
 * {
     font-size:15px;
-    font-family: "CodeNewRoman Nerd Font Propo";
+    font-family: "FiraCode Nerd Font Mono";
 }
 window#waybar{
     border-radius:10px;
@@ -14,6 +14,11 @@ tooltip {
     background:@background;
     color: @color7;
 }
+.modules-right {
+	padding-right: 7px;
+}
+
+
 #clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
     transition: all .3s ease;
     color:@color9;
