--- a/.config/waybar/themes/default/style-default.css
+++ b/.config/waybar/themes/default/style-default.css
@@ -2,7 +2,7 @@
 
 * {
     font-size:15px;
-    font-family: "CodeNewRoman Nerd Font Propo";
+    font-family: "FiraCode Nerd Font Mono";
 }
 window#waybar{
     all:unset;
