--- a/.config/wofi/style-wallpaper.css
+++ b/.config/wofi/style-wallpaper.css
@@ -13,7 +13,7 @@
 
 * {
   all: unset;
-  font-family: 'Fira Code Nerd Font Mono', monospace;
+  font-family: 'FiraCode Nerd Font Mono', monospace;
   font-size: 1.125rem;
   letter-spacing: -0.05em;
   outline: none;
@@ -42,29 +42,23 @@ window {
 #input {
   all: unset;
   margin: 1rem;
-  padding: 1.25rem 0.5rem 1.25rem 1.25rem;
-  border: none;
-  outline: none;
+  padding: 0.5rem 0.75rem;
+	border: 1.5px solid transparent;
   color: @text;
-  border-radius: 1rem;
+  border-radius: 10px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
   background-color: alpha(@foreground, 0.2);
 }
 #input image {
   border: none;
   color: @red;
-}
-#input * {
-  border: none;
-  outline: none;
+	margin-right: 0.5rem;
 }
 
 #input:focus {
-  outline: none;
-  border: none;
-
-  border-radius: 10;
+	border: 1.5px solid @color1;
 }
+
 #text {
   margin: 0 1rem;
   border: none;
@@ -81,10 +75,9 @@ window {
   color: @lavender;
 }
 #entry:selected {
-  box-shadow: 1px 1px 5px rgba(255, 255, 255, 0.03);
   border: none;
   border-radius: 20px;
-  background-color: alpha(@color10, 0.16);
+  background-color: alpha(@color10, 0.3);
 }
 #entry:selected #text {
   color: @color10;
