feat: audio control

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -32,7 +32,7 @@ tooltip {
     background:@background;
     color: @color7;
 }
-#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover, #pulseaudio:hover {
     transition: all .3s ease;
     color:@color9;
 }
@@ -107,7 +107,11 @@ tooltip {
     padding: 0px 5px;
     transition: all .3s ease;
     color:@color7;
-
+}
+#pulseaudio{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
 }
 #network{
     padding: 0px 5px;
