--- a/.config/waybar/themes/default/style-default.css
+++ b/.config/waybar/themes/default/style-default.css
@@ -32,7 +32,7 @@ tooltip {
     background:@background;
     color: @color7;
 }
-#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover, #pulseaudio:hover{
     transition: all .3s ease;
     color:@color9;
 }
@@ -51,6 +51,11 @@ tooltip {
     transition: all .3s ease;
     color:@color7;
 
+}
+#bluetooth{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
 }
 #workspaces {
     padding: 0px 5px;
@@ -106,6 +111,11 @@ tooltip {
     color:@color7;
 
 
+}
+#pulseaudio{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
 }
 #battery.charging {
     color: #26A65B;
