--- a/.config/waybar/themes/line/style-line.css
+++ b/.config/waybar/themes/line/style-line.css
@@ -19,7 +19,7 @@ tooltip {
 }
 
 
-#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover,#pulseaudio:hover{
     transition: all .3s ease;
     color:@color9;
 }
@@ -93,6 +93,11 @@ tooltip {
     color:@color7;
 
 
+}
+#pulseaudio{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
 }
 #battery.charging {
     color: #26A65B;
